<resources>
    <string name="app_name">Дискриминантный анализ</string>
    <string name="btn_name">Определить класс</string>
    <string name="object_class">Класс:</string>
    <string name="first_column">ХСЧ_марганец</string>
    <string name="second_column">ХСЧ_кремний</string>
    <string name="third_column">ХСЧ_сера</string>
    <string name="forth_column">Скорость прокатки</string>
    <string name="action_settings">Добавление объектов</string>
    <string name="class1">Класс 1</string>
    <string name="class2">Класс 2</string>
    <string name="class3">Класс 3</string>
    <string name="btn2_name">Готово</string>
    <string name="Fisher">Анализ Фишера</string>
    <string name="Raspr">Распределение</string>
    <string name="Regress">Регрессия</string>
    <string name="result_Fisherh1">h1:</string>
    <string name="result_Fisherh2">h2:</string>
    <string name="result_Fisherh3">h3:</string>
    <string name="step1">Степень 1:</string>
    <string name="step2">Степень 2:</string>
    <string name="step3">Степень 3:</string>
    <string name="osnov1">Основание 1:</string>
    <string name="osnov2">Основание 2:</string>
    <string name="osnov3">Основание 3:</string>
    <string name="b">b=</string>
</resources>
